--- a/demo-subscription.qmd
+++ b/demo-subscription.qmd
@@ -22,27 +22,27 @@ format:
 
 ### Российский уголь
 
-[Обзор зарубежных рынков угля (ежеквартально)](reports/2024-05 ЦЦИ_Квартальный_уголь_№2_rus.pdf)
+[Обзор зарубежных рынков угля (ежеквартально)](reports/2024-05%20ЦЦИ_Квартальный_уголь_№2_rus.pdf)
 
-[Цена экспортной альтернативы угля в России (ежеквартально)](reports/2024-02%20PBС%20Quarterly%20Coal%20NB.pdf)
+[Цена экспортной альтернативы угля в России (ежеквартально)](reports/Цена экспортной альтернативы угля в России.pdf)
 
-[Экспортные цены на уголь в России (еженедельно)](reports/2024-09-09 PBC Weekly Coal.pdf)
+[Экспортные цены на уголь в России (еженедельно)](reports/2024-09-09%20PBC%20Weekly%20Coal.pdf)
 
 [Перевозки угля. Ставки фрахта (еженедельно)](reports/2024-09-17%20ЦЦИ%20Фрахт%20угля.pdf)
 
 ### Российская нефть
 
-[Российский рынок нефти: добыча и экспорт (раз в 2 недели)](reports/2024-04-03%20Weekly%20GPB%20Crude%20RU.pdf)
+[Российский рынок нефти: добыча и экспорт (еженедельно)](reports/2024-10-23%20ЦЦИ%20нефть.pdf)
 
-[Российский рынок нефтепродуктов: бензин (раз в 2 недели)](reports/2024-04-11%20PBC%20Weekly%20OilProducts%20Gasoline.pdf)
+[Российский рынок нефтепродуктов: бензин (раз в 2 недели)](reports/2024-10-23 ЦЦИ бензин.pdf)
 
-[Российский рынок нефтепродуктов: дизель (раз в 2 недели)](reports/2024-04-26%20PBC%20Weekly%20OilProducts%20Diesel%20RU.pdf)
+[Российский рынок нефтепродуктов: дизель (раз в 2 недели)](reports/2024-10-09 ЦЦИ дизель.pdf)
 
 [Цены и дифференциалы на российскую нефть (раз в 2 недели)](reports/По%20каким%20ценам%20Россия%20продает%20нефть.pdf)
 
 ### Российский газ
 
-[Экспортные цены на газ в России (ежемесячно)](reports/2024-02%20PBC%20Monthly%20Gas.pdf)
+[Экспортные цены на газ в России (ежемесячно)](reports/2024-10 ЦЦИ Газ.pdf)
 
 [Опрос профессиональных аналитиков: Газ (ежеквартально)](reports/2024-02%20PBC%20Quarterly%20Gas%20Consensus.pdf)
 
@@ -83,10 +83,6 @@ format:
 ### Азотные удобрения
 
 [Азотные удобрения (еженедельно)](reports/2024-10-07%20ЦЦИ%20Азотные%20удобрения.pdf)
-
-[Азотные удобрения (еженедельно)](reports/2024-09-30%20ЦЦИ%20Азотные%20удобрения.pdf)
-
-[Азотные удобрения (еженедельно)](reports/2024-09-23%20ЦЦИ%20Азотные%20удобрения.pdf)
 
 ### Химия
 
