--- a/index.qmd
+++ b/index.qmd
@@ -39,6 +39,20 @@ format:
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Новости рынков
 
+**25.11.2024 Пшеница**
+
+Экспортные цены на пшеницу остались на уровне прошлой недели. Зимбабве может собрать в 2024 г. рекордный урожай пшеницы – 550 тыс. т. 
+Иордания в 2024/25 г. может нарастить импорт пшеницы на 5% до 1,2 млн т. 
+
+[Подробнее →](markets/markets-wheat.qmd)
+
+**20.11.2024 Нефть**
+
+По итогам предыдущей недели стоимость российской нефти выросла. Цены на Urals и ESPO снизилась более чем на 3% н/н. 
+Дисконт на ESPO FOB Kozmino сузился более чем на 6% н/н и обновил минимальное значение за текущий год. Морской экспорт российской нефти за отчетную неделю уменьшился на 23% н/н на фоне выхода с ремонтных работ ряда нефтеперерабатывающих заводов.
+
+[Подробнее →](markets/markets-oil.qmd)
+
 **18.11.2024 Пшеница**
 
 Экспортные цены на пшеницу за неделю снизились на 1 долл. По прогнозам экспертов аграрного рынка квота на экспорт зерна из России в 2025 г. может упасть до 10-12 млн т. Аналитики FranceAgriMer снизили  оценку экспорта мягкой пшеницы из Франции за пределы ЕС в 2024/25 г. на 0,1 млн т до 3,9 млн т. 
@@ -57,20 +71,6 @@ format:
 Ставки на прямые железнодорожные маршруты из Китая в Россию снизились в ноябре в среднем на 5%. В мультимодальном сообщении стоимость морского фрахта сохраняет тенденцию к продлению, а железнодорожного плеча – к росту.
 
 [Подробнее →](markets/markets-railways.qmd)
-
-
-**14.11.2024 Перевозки нефтепродуктов**
-
-Ставки фрахта светлых нефтепродуктов оставались стабильными на основных маршрутах, за исключением направления в Западную Индию. На рынке фрахта темных нефтепродуктов зафиксирован умеренный рост ставок на ключевых маршрутах из Черного моря.
-
-[Подробнее →](markets/markets-sea-freight.qmd)
-
-**12.11.2024 Перевозки нефти**
-
-Продление сокращения добычи странами ОПЕК+ и снижение экспорта российской нефти будет сдерживать рост фрахтовых ставок. Загрузка портов российской экспортной нефтью снизилась на фоне роста внутренней переработки нефти и профилактических работ в Новороссийске».
-
-[Подробнее →](markets/markets-sea-freight.qmd)
-
 
 :::
 
