--- a/markets/markets-chemicals.qmd
+++ b/markets/markets-chemicals.qmd
@@ -32,11 +32,43 @@ format:
 В октябре ставки фрахта на перевозку метанола по всем направлениям снизились до минимальных значений за последний год.
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
+:::
+::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
+### Индекс цен на метанол на российском рынке (CPT Москва)
+
+```{r,warning = FALSE, echo = FALSE, message = FALSE}
+library(highcharter)
+library(openxlsx)
+library(tidyr)
+
+df <- read.xlsx(xlsxFile = '../xls/график_метанол.xlsx', sheet = "Methanol",startRow = 4) 
+names(df) <- c('dt', 'value')
+df$dt = as.Date(as.numeric(df$dt), origin = "1899-12-30")
+df$year = format(df$dt, '%Y')
+df <- df[!is.na(df$value),]
+avg = mean(df$value[df$year == '2023'], na.rm = TRUE)
+df$index = df$value / avg * 100
+
+hc = highchart() %>% 
+   hc_add_series(df, type = "line", hcaes(x = dt, y = index), color = "#1A4AFC", name = "Индекс цен на метанол", marker = list(enabled = FALSE)) %>% 
+   hc_xAxis(type = 'datetime') %>% 
+   hc_yAxis(title  = list(text = '2023 = 100')) %>% 
+   hc_exporting(enabled = FALSE) %>% 
+   hc_tooltip(enabled  = FALSE)
+
+# поменять названия месяцев на русские. по умолчанию - на английском
+hc$x$conf_opts$lang$months = c("Январь"	,"Февраль",	"Март"	,"Апрель"	,"Май",	"Июнь", "Июль",	"Август",	"Сентябрь",	"Октябрь",	"Ноябрь",	"Декабрь")
+hc$x$conf_opts$lang$shortMonths = c("Янв", 	"Фев",	"Мар",	"Апр",	"Май",	"Июн",	"Июл",	"Авг",	"Сен",	"Окт",	"Ноя",	"Дек")
+
+hc
+
+```
+:::
+
+:::
 
 ### Методология
 
 [Методология ценовых индикаторов](../methodology/methodology-benchmark-pbc.qmd)
 
 [Спецификация котировок на удобрения](../methodology/specs-methanol.qmd)
-:::
-:::
