--- a/markets/markets-coal.qmd
+++ b/markets/markets-coal.qmd
@@ -24,7 +24,7 @@ format:
 Уголь марки PCI из России поставляется в ограниченном количестве, и на рынке уже несколько недель ощущается его дефицит. Перевозка энергетических углей в Китай остаётся невыгодной. С каждым днём цены на энергетический уголь снижаются на 1-2 юаня. Уголь марки ГЖ остаётся в прежней ценовой категории и демонстрирует стабильность. Тем не менее, энергетические угли пользуются хорошим спросом на рынке Южной Кореи, даже по более высоким ценам.
 
 - Рассматриваемый уровень цен на низколетучее пылеугольное топливо (PCI LV): 156 – 157 долл./т CFR Vietnam, 137 – 140 CFR China
-- Рассматриваемый уровень цен на энергетический уголь 5500 NAR FOB Дальний восток в Южную Корею: 105-110 долл./т
+- Рассматриваемый уровень цен на энергетический уголь 6000 FOB Дальний восток в Южную Корею: 105-110 долл./т
 
 *28.10.2024* Уголь
 
