--- a/markets/markets-fertilizers.qmd
+++ b/markets/markets-fertilizers.qmd
@@ -21,20 +21,17 @@ format:
 
 **Один в поле не воин**
 
-Объявлены результаты индийского тендера на закупку карбамида:Индия забирает 1 млн т карбамида с рынка.
-За пределами Индии мировой спрос на карбамид остается низким. 
+Объявлены результаты индийского тендера на закупку карбамида:Индия забирает 1 млн т карбамида с рынка. За пределами Индии мировой спрос на карбамид остается низким.
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
-
 
 *11.11.2024 Азотные удобрения*
 
 **Разворот цен на карбамид**
 
-За пределами Индии фиксируется низкая рыночная активность. 
+За пределами Индии фиксируется низкая рыночная активность.
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
-
 
 *02.11.2024 Азотные удобрения*
 
