--- a/markets/markets-wheat.qmd
+++ b/markets/markets-wheat.qmd
@@ -17,6 +17,19 @@ format:
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Котировки
 
+*25.11.2024 Пшеница*
+
+**Зимбабве собирает рекордный урожай пшеницы, Иордания – импортирует про запас**
+
+Экспортные цены на пшеницу остались на уровне прошлой недели. 
+
+Зимбабве может собрать в 2024 г. рекордный урожай пшеницы – 550 тыс. т. 
+
+Иордания в 2024/25 г. может нарастить импорт пшеницы на 5% до 1,2 млн т. 
+
+![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
+
+
 *18.11.2024 Пшеница*
 
 **Прогноз производства пшеницы во Франции повышен, экспорта – снижен**
@@ -48,18 +61,6 @@ USDA повысило прогноз производство пшеницы в 
 Экспортные цены на пшеницу за неделю снизились на 5 долл.
 
 Китай в 2024 г. ожидает рекордный урожай зерна  - более 700 млн т.
-
-![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
-
-*28.10.2024 Пшеница*
-
-**Рост экспортных цен на пшеницу забуксовал**
-
-Экспортные цены на пшеницу за неделю снизились на 2 долл.
-
-Турция снизит производство пшеницы в 2024 г. на 5,5% до 20,8 млн т.
-
-Россия в 1,4 раза нарастила поставки пшеницы на рынок Кении в начале 2024/25 г. 
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
