--- a/markets/markets-oil.qmd
+++ b/markets/markets-oil.qmd
@@ -16,6 +16,18 @@ format:
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Котировки
 
+*20.11.2024 Нефть*
+
+**Дисконт ESPO бьет рекорды 2024 г.**
+
+По итогам предыдущей недели стоимость российской нефти выросла. Цены на Urals и ESPO снизилась более чем на 3% н/н.
+
+Дисконт на ESPO FOB Kozmino сузился более чем на 6% н/н и обновил минимальное значение за текущий год.
+
+Морской экспорт российской нефти за отчетную неделю уменьшился на 23% н/н на фоне выхода с ремонтных работ ряда нефтеперерабатывающих заводов.
+
+![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
+
 *13.11.2024 Нефть*
 
 **Дисконт ESPO упал до минимумов 2024 г. вслед за Urals**
@@ -25,18 +37,6 @@ format:
 Дисконт на ESPO FOB Kozmino сузился на 15,8% и обновил минимальное значение за текущий год.
 
 Морской экспорт российской нефти за отчетную неделю увеличился на 15,8% на фоне возобновившихся поставок из порта "Новороссийск".
-
-![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
-
-*06.11.2024 Нефть*
-
-**Дисконт ESPO упал до минимумов 2024 г. вслед за Urals**
-
-По итогам предыдущей недели стоимость российской нефти упала. Цены на Urals снизились более чем на 3,0% н/н, цена на ESPO снизилась более чем на 2,0% н/н.
-
-Дисконт на ESPO FOB Kozmino сузился на 17,7% и достиг минимального значения за текущий год.
-
-Морской экспорт российской нефти за отчетную неделю снизился на 8,8% на фоне увеличения внутренней переработки нефти.
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 :::
@@ -57,7 +57,7 @@ hc = highchart() %>%
                  color = c("#1A4AFC"), 
                  name = c("Индекс цен на нефть")) %>% 
    hc_xAxis(type = 'datetime') %>% 
-   hc_yAxis(title  = list(text = '')) %>% 
+   hc_yAxis(title  = list(text = 'янв. 2022 = 100')) %>% 
    hc_exporting(enabled = FALSE) %>% 
    hc_tooltip(enabled  = FALSE)
 
